[package]
name = "pacmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
logging = ["log"]

[dependencies]
cfg-if = "1.0"
rand = "0.8"
log = { version = "0.4", optional = true }
pcap = "1.2.0"
chrono = "0.4.35"
etherparse = "0.14"
ncurses = "5.101.0"
regex = "1.10.4"
once_cell = "1.19.0"
glob = "0.3.1"
dns-lookup = "2.0.2"
backtrace = "0.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26", default-features = false, features = ["fs", "mman"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
win-sys = "0.3"

[dev-dependencies]
raw_sync = "0.1"
clap = {version = "4", features = ["derive"]}
env_logger = "0"

[profile.release]
debug = 1
